<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
	android:layout_marginLeft="50dp"
	android:layout_marginRight="50dp">
    
    <LinearLayout 
        android:layout_width="365px"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|center_vertical">
        
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/phone_dialpad_edittext_dialed_number"
            android:layout_weight="9" 
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#009587"
            android:textSize="34px"
            android:cursorVisible="false"/>
        <requestFocus />
        
        <ImageButton 
            android:layout_marginTop="40dp"
            android:id="@+id/phone_dialpad_button_delete"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/dialer_x"/>
        
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">
        
        <Button 
            android:background="@drawable/dialpad_button_normal"
            android:id="@+id/phone_dialpad_button_1"
            android:layout_width="117px"
            android:layout_height="65px"/>
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/phone_dialpad_one"
            android:textSize="34px"
            android:textColor="#009587"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_alignLeft="@+id/phone_dialpad_button_1"/>
        
        <Button
            android:background="@drawable/dialpad_button_normal"
            android:id="@+id/phone_dialpad_button_2"
            android:layout_width="117px"
            android:layout_height="65px"
            android:layout_toRightOf="@+id/phone_dialpad_button_1"/>
        
        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/phone_dialpad_button_2"
            android:orientation="horizontal">
            
            <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_two"
	            android:textSize="34px"
	            android:textColor="#009587"
	            android:gravity="center_vertical"/>
            
            <TextView 
                android:id="@+id/phone_dialpad_textview_abc"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_ABC"
	            android:textSize="14px"
	            android:textColor="#747474"
	            android:layout_centerHorizontal="true"
	            android:layout_marginLeft="10dp"/>
        </LinearLayout>
        
        <Button 
            android:background="@drawable/dialpad_button_normal"
            android:id="@+id/phone_dialpad_button_3"
            android:layout_width="117px"
            android:layout_height="65px"
            android:layout_toRightOf="@+id/phone_dialpad_button_2"/>
        
        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/phone_dialpad_button_3"
            android:orientation="horizontal">
            
            <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_three"
	            android:textSize="34px"
	            android:textColor="#009587"
	            android:gravity="center_vertical"/>
            
            <TextView 
                android:id="@+id/phone_dialpad_textview_def"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_DEF"
	            android:textSize="14px"
	            android:textColor="#747474"
	            android:layout_centerHorizontal="true"
	            android:layout_marginLeft="10dp"/>
        </LinearLayout>
        
    </RelativeLayout>
    
    
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <Button 
            android:background="@drawable/dialpad_button_normal"
            android:id="@+id/phone_dialpad_button_4"
            android:layout_width="117px"
            android:layout_height="65px"/>
        
        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/phone_dialpad_button_4"
            android:orientation="horizontal">
            
            <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_four"
	            android:textSize="34px"
	            android:textColor="#009587"
	            android:gravity="center_vertical"/>
            
            <TextView 
                android:id="@+id/phone_dialpad_textview_ghi"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_GHI"
	            android:textSize="14px"
	            android:textColor="#747474"
	            android:layout_centerHorizontal="true"
	            android:layout_marginLeft="10dp"/>
        </LinearLayout>
        
        <Button 
            android:background="@drawable/dialpad_button_normal"
            android:id="@+id/phone_dialpad_button_5"
            android:layout_width="117px"
            android:layout_height="65px"
            android:layout_toRightOf="@+id/phone_dialpad_button_4"/>
        
        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/phone_dialpad_button_5"
            android:orientation="horizontal">
            
            <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_five"
	            android:textSize="34px"
	            android:textColor="#009587"
	            android:gravity="center_vertical"/>
            
            <TextView 
                android:id="@+id/phone_dialpad_textview_jkl"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_JKL"
	            android:textSize="14px"
	            android:textColor="#747474"
	            android:layout_centerHorizontal="true"
	            android:layout_marginLeft="10dp"/>
        </LinearLayout>
        
        <Button 
            android:background="@drawable/dialpad_button_normal"
            android:id="@+id/phone_dialpad_button_6"
            android:layout_width="117px"
            android:layout_height="65px"
            android:layout_toRightOf="@+id/phone_dialpad_button_5"/>
        
        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/phone_dialpad_button_6"
            android:orientation="horizontal">
            
            <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_six"
	            android:textSize="34px"
	            android:textColor="#009587"
	            android:gravity="center_vertical"/>
            
            <TextView 
                android:id="@+id/phone_dialpad_textview_mno"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_MNO"
	            android:textSize="14px"
	            android:textColor="#747474"
	            android:layout_centerHorizontal="true"
	            android:layout_marginLeft="10dp"/>
        </LinearLayout>
        
    </RelativeLayout>
  
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        
        <Button 
            android:background="@drawable/dialpad_button_normal"
            android:id="@+id/phone_dialpad_button_7"
            android:layout_width="117px"
            android:layout_height="65px"/>
        
        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/phone_dialpad_button_7"
            android:orientation="horizontal">
            
            <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_seven"
	            android:textSize="34px"
	            android:textColor="#009587"
	            android:gravity="center_vertical"/>
            
            <TextView 
                android:id="@+id/phone_dialpad_textview_pqrs"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_PQRS"
	            android:textSize="14px"
	            android:textColor="#747474"
	            android:layout_centerHorizontal="true"
	            android:layout_marginLeft="10dp"/>
        </LinearLayout>
        
        <Button 
            android:background="@drawable/dialpad_button_normal"
            android:id="@+id/phone_dialpad_button_8"
            android:layout_width="117px"
            android:layout_height="65px"
            android:layout_toRightOf="@+id/phone_dialpad_button_7"/>
        
        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/phone_dialpad_button_8"
            android:orientation="horizontal">
            
            <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_eight"
	            android:textSize="34px"
	            android:textColor="#009587"
	            android:gravity="center_vertical"/>
            
            <TextView 
                android:id="@+id/phone_dialpad_textview_tuv"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_TUV"
	            android:textSize="14px"
	            android:textColor="#747474"
	            android:layout_centerHorizontal="true"
	            android:layout_marginLeft="10dp"/>
        </LinearLayout>
        
        <Button 
            android:background="@drawable/dialpad_button_normal"
            android:id="@+id/phone_dialpad_button_9"
            android:layout_width="117px"
            android:layout_height="65px"
            android:layout_toRightOf="@+id/phone_dialpad_button_8"/>
        
        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/phone_dialpad_button_9"
            android:orientation="horizontal">
            
            <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_nine"
	            android:textSize="34px"
	            android:textColor="#009587"
	            android:gravity="center_vertical"/>
            
            <TextView 
                android:id="@+id/phone_dialpad_textview_wxyz"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_WXYZ"
	            android:textSize="14px"
	            android:textColor="#747474"
	            android:layout_centerHorizontal="true"
	            android:layout_marginLeft="10dp"/>
        </LinearLayout>
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        
        <Button 
            android:background="@drawable/dialpad_button_normal"
            android:id="@+id/phone_dialpad_button_asterisk"
            android:layout_width="117px"
            android:layout_height="65px"/>
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/phone_dialpad_asterisk"
            android:textSize="34px"
            android:textColor="#747474"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_alignLeft="@+id/phone_dialpad_button_asterisk"/>
        
        <Button 
            android:background="@drawable/dialpad_button_normal"
            android:id="@+id/phone_dialpad_button_0"
            android:layout_width="117px"
            android:layout_height="65px"
            android:layout_toRightOf="@+id/phone_dialpad_button_asterisk"/>
        
        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/phone_dialpad_button_0"
            android:orientation="horizontal">
            
            <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_zero"
	            android:textSize="34px"
	            android:textColor="#009587"
	            android:gravity="center_vertical"/>
            
            <TextView 
                android:id="@+id/phone_dialpad_textview_plus"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_dialpad_plus"
	            android:textSize="14px"
	            android:textColor="#747474"
	            android:layout_centerHorizontal="true"
	            android:layout_marginLeft="10dp"/>
        </LinearLayout>
        
        <Button 
            android:background="@drawable/dialpad_button_normal"
            android:id="@+id/phone_dialpad_button_hash"
            android:layout_width="117px"
            android:layout_height="65px"
            android:layout_toRightOf="@+id/phone_dialpad_button_0"/>
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/phone_dialpad_hash"
            android:textSize="34px"
            android:textColor="#747474"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_alignLeft="@+id/phone_dialpad_button_hash"/>
        
    </RelativeLayout>
    
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        
        <ImageButton
            android:layout_weight="1" 
            android:layout_width="160px"
            android:layout_height="56px"
            android:src="@drawable/ic_video_call"
            android:background="@drawable/border_video_voice_style"
            android:id="@+id/phone_dialpad_button_video_call"/>
        <ImageButton 
            android:layout_marginLeft="30px"
            android:layout_weight="1"
            android:layout_width="160px"
            android:layout_height="56px"
            android:src="@drawable/ic_voice_call"
            android:background="@drawable/border_video_voice_style"
            android:id="@+id/phone_dialpad_button_voice_call"/>
        
    </LinearLayout>

</LinearLayout>
